--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
 
 	<string name="stub_fragment_functional_not_implemented">Этот функционал еще не реализован</string>
 
+	<string name="drawer_open">Открыть меню</string>
+	<string name="drawer_close">Закрыть меню</string>
+
 </resources>
